bring back embark (just needed to bind a suitable key)

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -1542,7 +1542,7 @@ These packages succeed selectrum (RIP).
     :straight (embark :type git :host github :repo "oantolin/embark")
     :bind
     ;; TODO: need a different map here
-    (:map electrum-minibuffer-map
+    (:map minibuffer-local-map
           ("C-j" . embark-act))
 
     :config
