--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -108,6 +108,45 @@ Without this, the warning buffer pops up whenever native-comp has some warning.
     `(eval-after-load-all ,my-features (lambda () ,@body)))
 #+end_src
 
+*** Base64 image data URL
+:PROPERTIES:
+:ID:       37ECB098-E212-4107-9DEA-4A45A019AA9D
+:END:
+#+begin_src emacs-lisp
+  (defun image-to-base64-data-url (image-path)
+    "Converts an image at IMAGE-PATH to a Base64-encoded data URL."
+    (interactive "fSelect image file: ")
+    (let* ((image-type (file-name-extension image-path))
+           (mime-type (cond ((string= image-type "png") "image/png")
+                            ((string= image-type "jpg") "image/jpeg")
+                            ((string= image-type "jpeg") "image/jpeg")
+                            ((string= image-type "gif") "image/gif")
+                            (t (error "Unsupported image type"))))
+           (base64-string (with-temp-buffer
+                            (insert-file-contents-literally image-path)
+                            (base64-encode-region (point-min) (point-max) t)
+                            (buffer-string))))
+       (concat "data:" mime-type ";base64," base64-string)))
+
+  (defun image-to-base64 (image-path)
+    "Converts an image at IMAGE-PATH to a Base64-encoded data URL."
+    (interactive "fSelect image file: ")
+    (let* ((image-type (file-name-extension image-path))
+           (mime-type (cond ((string= image-type "png") "image/png")
+                            ((string= image-type "jpg") "image/jpeg")
+                            ((string= image-type "jpeg") "image/jpeg")
+                            ((string= image-type "gif") "image/gif")
+                            (t (error "Unsupported image type"))))
+           (base64-string (with-temp-buffer
+                            (insert-file-contents-literally image-path)
+                            (base64-encode-region (point-min) (point-max) t)
+                            (buffer-string))))
+       base64-string))
+#+end_src
+
+#+RESULTS:
+: image-to-base64-data-url
+
 * Packages
 
 ** Set up ~package.el~
