--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -702,6 +702,24 @@ better-defaults enables ido-mode, but we're using vertico.
 #+begin_src emacs-lisp
   (ido-mode -1)
 #+end_src
+** Garbage collection and performance
+
+#+begin_src emacs-lisp
+  (setq gc-cons-threshold 100000000)
+  (setq read-process-output-max (* 1024 1024))
+  (setq jit-lock-defer-time 0.05)
+
+  (use-package gcmh
+    :straight t
+    :config
+    (setq gcmh-high-cons-threshold (* 1024 1024 1024))
+    (setq gcmh-idle-delay-factor 20)
+    (gcmh-mode 1))
+#+end_src
+
+#+RESULTS:
+: t
+
 * Keybindings
 ** General.el
 :PROPERTIES:
@@ -931,7 +949,14 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
     ;; bind `function.outer`(entire function block) to `f` for use in things like `vaf`, `yaf`
     (define-key evil-outer-text-objects-map "f" (evil-textobj-tree-sitter-get-textobj "function.outer"))
     ;; bind `function.inner`(function block without name and args) to `f` for use in things like `vif`, `yif`
-    (define-key evil-inner-text-objects-map "f" (evil-textobj-tree-sitter-get-textobj "function.inner")))
+    (define-key evil-inner-text-objects-map "f" (evil-textobj-tree-sitter-get-textobj "function.inner"))
+
+    (define-key evil-inner-text-objects-map "b" (evil-textobj-tree-sitter-get-textobj ("block.inner"))) 
+    (define-key evil-outer-text-objects-map "b" (evil-textobj-tree-sitter-get-textobj ("block.outer")))
+
+    (define-key evil-outer-text-objects-map "c" (evil-textobj-tree-sitter-get-textobj "class.outer"))
+
+    (define-key evil-inner-text-objects-map "c" (evil-textobj-tree-sitter-get-textobj "class.inner")))
 #+END_SRC
 
 #+RESULTS:
@@ -3154,9 +3179,6 @@ Let's use web-mode, which supports font locking for templating.
     :straight t
     :commands yas-minor-mode
     :hook (go-mode . yas-minor-mode))
-
-  (setq gc-cons-threshold 100000000)
-  (setq read-process-output-max (* 1024 1024))
 
 
   (use-package lsp-mode
