--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -310,10 +310,10 @@ This mode line is pretty.
   (use-package mood-line
     :straight t
     :config
-    (set-face-attribute 'mood-line-buffer-name
-                        nil
-                        :weight 'bold)
+    (setq mood-line-glyph-alist mood-line-glyphs-fira-code)
+    (setq mood-line-format mood-line-format-default)
     (mood-line-mode))
+   
 #+END_SRC
 
 #+RESULTS:
