--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -3354,12 +3354,13 @@ Let's use web-mode, which supports font locking for templating.
   (use-package rust-mode
     :ensure t
     :after general
+    :hook ((rust-mode . lsp-deferred)
+           (rust-ts-mode . lsp-deferred))
     :config
     (add-hook 'rust-mode-hook
               (lambda () (setq indent-tabs-mode nil)))
-    (setq rust-format-on-save t)
-    )
-    
+    (setq rust-format-on-save t))
+
 
 #+end_src
 
