--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -3278,6 +3278,18 @@ Let's use web-mode, which supports font locking for templating.
     (setq rust-format-on-save t))
 
 
+  (with-eval-after-loads '(rust-mode lsp-mode)
+    (setq lsp-rust-analyzer-cargo-watch-command "clippy")
+    (setq lsp-inlay-hint-enable t)
+    (setq lsp-eldoc-render-all nil)
+
+    (setq lsp-rust-analyzer-display-lifetime-elision-hints-enable "skip_trivial")
+    (setq lsp-rust-analyzer-display-chaining-hints t)
+    (setq lsp-rust-analyzer-display-lifetime-elision-hints-use-parameter-names t)
+    (setq lsp-rust-analyzer-display-closure-return-type-hints t)
+    (setq lsp-rust-analyzer-display-parameter-hints t)
+    (setq lsp-rust-analyzer-display-reborrow-hints nil)
+    (lsp-inlay-hints-mode t))
 #+end_src
 
 #+RESULTS:
